# bhtrace

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  PATTERNS.md  README.md  README.sync-conflict-20241212-184124-VSIJP4A.md  environment.yml  pyproject.toml  requirements.txt  setup.py  tst_htrace.pickle
.github/workflows/: ci.yml
application/: BenchFlat_calc.py  BenchFlat_image.py  BenchSchw_calc.py  BenchSchw_consv.py  BenchSchw_image.py  HE2d_calc.py  HE2d_plot.py
bhtrace/: README.md  __init__.py  effgeom.py  emit.py  globs.py  imagen.py  registries.py  routines.py  solveieq.py  spacetime.py  task.py  tracer.py
bhtrace/data/: __init__.py  grrtdata.py  runningtensor.py  trajectory.py  utils.py
bhtrace/electrodynamics/: __init__.py  ed_models.py  electrodynamics.py
bhtrace/exact/: _base.py  newtonian.py  schwarzschild.py
bhtrace/fields/: electrodynamics.py
bhtrace/functional/: __init__.py  caching.py  data.py  debug.py  diff.py  graphics.py  linalg.py  odeint.py  routines.py  transform.py
bhtrace/geometry/: __init__.py  collection_ax.py  collection_cart.py  collection_sph.py  coord_systems.py  coordinate_collection.py  coordinates.py  effgeom.py  electrodynamics.py  electrodynamics_factory.py  electrodynamics_models.py  observer.py  particle.py  particle_factory.py  particle_zoo.py  spacetime.py  spacetime_factory.py  spacetimes_ax.py  spacetimes_cart.py  spacetimes_eff.py  spacetimes_sph.py  transformation.py  transformation_collection.py  transformations,py  transformations.py
bhtrace/graphics/: __init__.py  coloring.py  histogram.py  horizons.py  lensing.py  plot2d.py  plot3d.py  plotfunc.py  presets.py  reports.py  scaling.py  traj2d.py  traj3d.py  utils.py  (+2 more)
examples/: BH_image.ipynb  TrajExample.ipynb  _Sim_10.pickle  _Sim_5.pickle  demo.ipynb  effgeom_lensing.ipynb  example.ipynb  grrt_comparison.py  kerr_bolometric.ipynb  kerr_spectral.ipynb  lensing.py  lensing_comparison.py  lensing_eff.py  mwe.py  mwe_2d.py  mwe_2d_eff.py  mwe_2d_eff_sph.py  mwe_2d_sph.py  mwe_imaging2d_old.py  mwe_setup.py  mwe_sph_2d.py  mwe_tracing2d_old.py
hijacobi/: __init__.py  emit.py  imagen.py  model.py  routines.py  solveieq.py  task.py  tracer.py
test/: test_2d.py  test_precision.py  tracing_test.py  validation.py
tests/: Convergence.ipynb  equation_bench.ipynb  full_test.ipynb  htracer_test.py  rootfinder_test.ipynb  routines_test.py  spacetime_test.py  task_class_bench.ipynb  tst.py  tst_htrace.pickle
to_merge/: BH_Images_postproc.ipynb
(+201 files in other folders)
